force-app/main/default/objects/holiday_and_day_off__c/holiday_and_day_off__c.object-meta.xml
<CustomObject>
    <label>Holiday and Day off</label>
    <nameField>
        <displayFormat>HDF-{00000}</displayFormat>
        <label>holiday and day off #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday and Days off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>