force-app/main/default/objects/holiday_and_day_off__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Holiday and Days off</relationshipLabel>
    <relationshipName>Holiday_and_Days_off</relationshipName>
    <type>Lookup</type>
</CustomField>