force-app/main/default/objects/holiday_and_day_off__c/validationRules/end_date_must_be_greater_than_or_equal_t.validationRule-meta.xml
<ValidationRule>
    <fullName>end_date_must_be_greater_than_or_equal_t</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be greater than or equal to start date</errorMessage>
</ValidationRule>